# FEPR-Implementation

./: BaseGL  CMakeLists.txt  README.md
Resources/Shaders/: FragmentShader.glsl
Sources/: Dynamic.cpp  Dynamic.h  Main.cpp  Mesh.cpp  Mesh.h
